--- a/index.html
+++ b/index.html
@@ -16,3 +16,36 @@ Vizitku ostyluj pomocí CSS:
 
 Tip: Webdesign In 4 Minutes https://jgthms.com/web-design-in-4-minutes/
 -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vizitka</title>
+
+    <link rel="stylesheet" href="/Users/Kristyna/Desktop/czechitas/DU_01/du-01-vizitka-kristynapavl/style.css">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+
+</head>
+<body>
+
+<section class="boxik">
+
+    <h1>Kristýna Pavlíková</h1>
+    <img class="foto" src="foto/IMG_2263.JPG" alt="fokta">
+
+    <p>Jsem grafička a designérka, moravačka, která se oklikou přes Anglii dostala do Prahy. 
+
+    </p>
+
+    <p>
+        E-mail: <a href="mailto: kristyna.pavlikova1@gmail.com"> kristyna.pavlikova1@gmail.com</a>
+        </p>
+
+</section> 
+</body>
+</html>
