--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@ Tip: Webdesign In 4 Minutes https://jgthms.com/web-design-in-4-minutes/
 <section class="boxik">
 
     <h1>Kristýna Pavlíková</h1>
-    <img class="foto" src="foto/IMG_2263.JPG" alt="fokta">
+    <img class="foto" src="foto/IMG_8656.jpeg" alt="fokta">
 
-    <p>Jsem grafička a designérka, moravačka, která se oklikou přes Anglii dostala do Prahy. 
+    <p>Jsem grafička a v současné době taky webdesignérka. Pocházím z Moravy, ale oklikou přes Anglii jsem se dostala do Prahy.
+         Ráda fotím, čtu a hraju na ukulele. 
 
     </p>
 
     <p>
+        FB: <a href="https://www.facebook.com/kristyna.pavlik/"> Kristýna Pavlíková</a><br>
         E-mail: <a href="mailto: kristyna.pavlikova1@gmail.com"> kristyna.pavlikova1@gmail.com</a>
         </p>
 
