--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Tip: Webdesign In 4 Minutes https://jgthms.com/web-design-in-4-minutes/
 -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,21 +33,53 @@ Tip: Webdesign In 4 Minutes https://jgthms.com/web-design-in-4-minutes/
 </head>
 <body>
 
-<section class="boxik">
+<header>
+     <section class="kontakt"> 
+<ul>
+    <li><a href="https://www.facebook.com/kristyna.pavlik/"> facebook </a>
+    </li>  
+    <li>
+        <a href="mailto:kristyna.pavlikova1@gmail.com"> e-mail</a>
+    </li>
+</ul>      
+</section>  
 
-    <h1>Kristýna Pavlíková</h1>
-    <img class="foto" src="foto/IMG_8656.jpeg" alt="fokta">
+  <h1>Kristýna Pavlíková</h1>
 
-    <p>Jsem grafička a v současné době taky webdesignérka. Pocházím z Moravy, ale oklikou přes Anglii jsem se dostala do Prahy.
+<img class="logo-kp" src="/Users/Kristyna/Desktop/czechitas/DU_01/du-01-vizitka-kristynapavl/foto/kp-01.png" alt="Logo">
+
+  
+   <!-- <p>Jsem grafička a v současné době taky webdesignérka. Pocházím z Moravy, ale oklikou přes Anglii jsem se dostala do Prahy.
          Ráda fotím, čtu a hraju na ukulele. 
 
-    </p>
+    </p>-->
+ 
+</header>
 
-    <p>
-        FB: <a href="https://www.facebook.com/kristyna.pavlik/"> Kristýna Pavlíková</a><br>
-        E-mail: <a href="mailto: kristyna.pavlikova1@gmail.com"> kristyna.pavlikova1@gmail.com</a>
-        </p>
+<section>
+<nav>
+<ul>
+    <il>
+        <a href="/Users/Kristyna/Desktop/czechitas/DU_01/du-01-vizitka-kristynapavl/somnium.html"><img class="somnium-nahled" src="foto/vizitka.jpg" alt="sominum"></a>
+        
+    </il>
+    <il>
+        <img class="priscilla-nahled" src="foto/priscila.jpg" alt="Priscilla ilustrace">
+    </il>
+        <img class="kalendar_nahled" src="foto/Horizontal_Calendar_Mockup_2.jpg" alt="Ilistrace pro kalendář Města">
+    <il>
+        <img class="lag-nahled" src="foto/posteruwaga.jpg" alt="lag">
+    </il>
+    <il>
+        <img class="anim_video-nahled" src="foto/video.jpg" alt="animace">
+    </il>
+    <il>
+        <img class="ostrava-nahled" src="foto/poster1_ostrava.jpg" alt="Ilustrace Ostrava">
+    </il>
+</ul>
+</nav>
+</section>
 
-</section> 
+
 </body>
 </html>
